Fix alignment and make responsiveness

--- a/detail.css
+++ b/detail.css
@@ -21,7 +21,7 @@ body.dark {
 }
 
 .Border-area {
-  margin-top: 40px;
+  margin-top: 15px;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -31,6 +31,15 @@ body.dark {
   box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.1);
   padding-inline: 24px;
   background-color: var(--elements-color);
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+}
+
+.title{
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .header-content {
@@ -50,10 +59,11 @@ body.dark {
 .country-details-container {
   margin-inline: auto;
   margin-top: 32px;
+  margin-bottom: 30px;
 }
 
 .goto-button {
-  margin: 80px 0px 0px 70px;
+  margin: 150px 0px 0px 70px;
 }
 
 .back-button {
@@ -61,7 +71,8 @@ body.dark {
   background-color: var(--elements-color);
   border-radius: 4px;
   cursor: pointer;
-  box-shadow: 0 0 10px var(--back-btn);
+  box-shadow: 0 2px 4px 0px var(--back-btn)
+  
 }
 
 .country-details {
@@ -73,17 +84,22 @@ body.dark {
 }
 
 .country-details img {
-  width: 450px;
-  height: 330px;
+  width: 470px;
+  height: 370px;
+  box-shadow: 0 0 8px 0px rgba(0, 0, 0, 0.2);
+  
 }
+
 
 .details-text {
   display: flex;
   flex-direction: column;
-  row-gap: 12px;
-  column-gap: 64px;
+  column-gap: 50px;
   max-height: 180px;
   flex-wrap: wrap;
+  margin-top: 10px;
+  font-weight: 600;
+ 
 }
 
 .details-text p {
@@ -98,24 +114,30 @@ body.dark {
   margin-top: 5px;
   display: flex;
   flex-wrap: wrap;
-  gap: 5px;
+  gap: 10px;
+ 
 }
 
 .border {
   display: flex;
   align-items: center;
   flex-direction: row;
+  margin-left: 20px;
 }
 
 .border-countries a {
-  padding: 4px 16px;
+  padding: 3px 15px;
   display: flex;
+  align-items: center;
   background-color: var(--elements-color);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0.8);
+  box-shadow: 0 2px 4px 0px var(--back-btn);
   border-radius: 2px;
   font-size: 14px;
   text-decoration: none;
   color: var(--text-color);
+}
+.left-side{
+  margin-bottom: 80px;
 }
 .left-side p {
   margin-top: 10px;
@@ -124,29 +146,13 @@ body.dark {
   margin-top: 10px;
 }
 
-@media (max-width: 375px) {
-  .Header {
-    padding-inline: 0px;
-  }
-  .country-details img {
-    width: 250px;
-    height: 150px;
-  }
-  .Border-area {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    margin-bottom: 20px;
-  }
-}
-
 @media (max-width: 940px) {
   .title {
     font-size: 12px;
   }
   .header-content {
-    padding-right: 0;
-    padding-left: 0;
+    margin-left: 20px;
+    margin-right: 30px
   }
   .Border-area {
     display: flex;
@@ -169,7 +175,7 @@ body.dark {
     gap: 16px;
   }
   .goto-button {
-    margin: 30px 0px 0px 25px;
+    margin: 130px 0px 0px 75px;
   }
 
   .details-text {
@@ -177,8 +183,8 @@ body.dark {
   }
 
   .country-details img {
-    width: 250px;
-    height: 150px;
+    width: 450px;
+    height: 300px;
   }
   .left-side {
     margin-bottom: 2rem;
@@ -188,5 +194,23 @@ body.dark {
   }
   .left-side > p {
     margin-bottom: 2px;
+  }
+  .country-details-container{
+    margin-left: 50px
+  }
+}
+@media (max-width: 375px) {
+  .Header {
+    padding-inline: 0px;
+  }
+  .country-details img {
+    width: 250px;
+    height: 150px;
+  }
+  .Border-area {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-bottom: 20px;
   }
 }
