--- a/home.css
+++ b/home.css
@@ -7,6 +7,12 @@
   box-sizing: border-box;
 }
 
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  display: none;
+}
 body {
   --background-color: hsl(0, 0%, 98%);
   --text-color: black;
@@ -30,9 +36,12 @@ body.dark {
   --mgColor: hsl(0, 0%, 98%);
   transition: 0.15s;
 }
-
-.Search {
-  padding: 24px;
+.main-container {
+  overflow: hidden;
+}
+.title{
+  font-size: 14px;
+  font-weight: bold;
 }
 
 a {
@@ -42,8 +51,9 @@ a {
 
 .Header {
   box-shadow: 0 2px 4px 0px rgba(0, 0, 0, 0.1);
-  padding-inline: 24px;
+  padding: 0px 4.2rem;
   background-color: var(--elements-color);
+  
 }
 
 .header-content {
@@ -51,38 +61,43 @@ a {
   align-items: center;
   justify-content: space-between;
   margin-inline: auto;
-  padding-left: 20px;
-  padding-right: 40px;
+
 }
 
 .theme-changer {
   cursor: pointer;
+  font-size: 14px;
   font-weight: bold;
 }
 
 #card-container {
-  margin-top: 10px;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-bottom: 10px;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
   gap: 3rem;
-  flex-wrap: wrap;
+  width: 100%;
+  place-content: space-between;
+  margin-bottom: 50px;
+
 }
 
 .container-card {
-  margin: 30px 20px 30px 20px;
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0px 4.2rem;
+  margin: auto;
 }
 
 .card {
-  width: 315px;
+  margin: auto;
+  max-width: 310px;
+  min-width: 230px;
   border-radius: 8px;
   overflow: hidden;
   padding-bottom: 24px;
   box-shadow: 0 0 8px 0px rgba(0, 0, 0, 0.2);
   background-color: var(--elements-color);
-  height: 400px;
+  height: 380px;
 }
 
 .card:hover {
@@ -91,7 +106,7 @@ a {
 }
 
 .card-title {
-  font-size: 20px;
+  font-size: 16px;
   margin-block: 16px;
   padding-left: 10px;
 }
@@ -103,31 +118,30 @@ a {
 .cardBody p {
   margin-block: 8px;
   padding-left: 10px;
-  font-weight: 300;
+  font-weight: 600;
 }
 
 .card img {
   width: 100%;
   height: 200px;
-  box-shadow: 0 0 1px;
+  box-shadow: 0 0 5px;
 }
 
 .search-filter-container {
-  margin-inline: auto;
-  margin-top: 130px;
-  margin-left: 10px;
-  margin-right: 30px;
   display: flex;
+  margin-top: 70px;
+  margin-bottom: 50px;
   justify-content: space-between;
-  padding: 0 2rem;
+  padding: 0 4.2rem;
 }
 
 .Search_bar {
   box-shadow: 0 0 8px 0px rgba(0, 0, 0, 0.15);
   max-width: 450px;
+  height: 47px;
   width: 90%;
   border-radius: 4px;
-  padding-left: 30px;
+  /* padding-left: 30px; */
   overflow: hidden;
   background-color: var(--elements-color);
   color: var(--text-color);
@@ -137,16 +151,17 @@ a {
   border: none;
   outline: none;
   width: 90%;
-  height: 50px;
+  height: 47px;
   color: var(--text-color);
   background-color: var(--elements-color);
 }
 .Search_bar input::placeholder {
-  color:var(--text-color);
+  color: var(--text-color);
 }
 .filter-by-region {
   width: 100%;
-  height: 50px;
+  height: 47px;
+  margin: 3px;
   border-radius: 0.25em;
   border: none;
   padding: 15px;
@@ -161,25 +176,72 @@ a {
   font-size: 16px;
 }
 
+option {
+  margin-top: 10px;
+}
+
 #magnify {
   margin-right: 10px;
+  color: var(--mgColor);
 }
 
 .Header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
   background-color: var(--elements-color);
-  z-index: 9999; /* Sets a z-index to ensure the element stays on top of other elements */
-}
-.Header {
-  margin: 0px;
 }
 
+@media (max-width: 1190px) {
+  #card-container {
+    grid-template-columns: repeat(3, 1fr);
+    gap: 3rem;
+  }
+}
+@media (max-width: 1040px) {
+  #card-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 4rem;
+  }
+}
 
+@media (max-width: 998px) {
+  .title {
+    font-size: 16px;
+  }
+  .header-content {
+    padding-right: 5px;
+    padding-left: 20px;
+  }
 
-@media only screen and (max-width: 768px) {
+  .header-content p {
+    font-size: 16px;
+  }
+
+  .header-content h2 {
+    font-size: 16px;
+  }
+  .Search_bar {
+    width: 85%;
+    padding-left: 30px;
+  }
+
+  .filter-by-region {
+    margin-top: 3px
+  }
+
+}
+@media (max-width: 778px) {
+  .Search_bar{
+    width: 50%;
+  }
+  .search-filter-container{
+    padding: 0px 2.1rem;
+  }
+  .container-card{
+    padding: 0px 3.1rem;
+  }
+ 
+}
+
+@media (max-width: 768px) {
   .title {
     font-size: 12px;
   }
@@ -189,32 +251,71 @@ a {
   }
 
   .header-content p {
-    font-size: 12px;
+    font-size: 16px;
   }
 
   .header-content h2 {
     font-size: 16px;
   }
-  .Search_bar {
-    width: 335px;
-    margin-bottom: 24px;
-    margin-left: 10px;
-    margin-right: 30px;
+  .container-card {
+    padding: 0 2.1rem;
   }
-  .filter {
-    margin-left: 10px;
-  }
-  .filter-by-region {
-    width: auto;
-  }
-  .search-filter-container {
-    flex-direction: column;
-    width: 100%;
-    padding-left: 0;
-    margin-top: 75px;
+  #card-container {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
   }
 
-  .countries-container {
-    justify-content: center;
+  
+  .search-filter-container {
+    margin: auto;
+    display: flex;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    justify-content: space-between;
+  }
+  .Search_bar {
+    /* padding-left: 30px; */
+    padding-top: 9px;
+  }
+  .Search_bar input {
+    height: 30px;
+    width: 80%;
+  }
+}
+
+@media (max-width:550px) {
+  #card-container {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 4rem;
+  }
+  .Header{
+    padding: 0px 2.1rem;
+  }
+}
+
+@media (max-width:500px) {
+  #card-container {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 4rem;
+  }
+   .search-filter-container {
+    flex-direction: column;
+    margin: auto;
+    display: flex;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+  .Search_bar{
+    width: 100%;
+    margin-bottom: 8px;
+  }
+  .filter-by-region{
+    width: 50%;
+  }
+}
+@media (max-width:398px) {
+
+  .filter-by-region{
+    width: 70%;
   }
 }
